app/routes/record/recordSearch/components/ActiveFilters.module.css
.active-filters {
  display: flex;
  flex-direction: column;
  gap: var(--gap);

  ul {
    display: flex;
    flex-flow: row wrap;
    gap: var(--gap);
    list-style: none;
    align-items: center;
  }
}

.active-filters-header {
  display: flex;
  align-items: center;

  h2 {
    margin-right: auto;
  }
}

.active-filter-texts {
  display: flex;
  flex-flow: row wrap;
}

.active-filter {
  padding: var(--gap-s) var(--gap);
  border-radius: var(--border-radius);
  display: flex;
  align-items: center;
  background-color: var(--color-gray-light);
  border: 1px solid var(--color-thin-border);
}

.active-filter-value {
  font-style: italic;
  margin-inline: var(--gap-s);
}

